apps/portfolio/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-backend
  namespace: portfolio
spec:
  selector:
    app.kubernetes.io/name: portfolio-backend
  ports:
    - name: http
      port: 80
      targetPort: http
